--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My second semester project in Frontend development",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"No tests yet\"",
     "dev": "npx tailwindcss -i ./css/input.css -o ./css/style.css --watch",
     "build": "npx tailwindcss -i ./css/input.css -o ./css/style.css --minify",
     "prepare": "husky install"
@@ -16,6 +16,8 @@
     "@eslint/js": "^9.22.0",
     "eslint": "^9.22.0",
     "globals": "^16.0.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^15.5.0",
     "prettier": "^3.5.3",
     "tailwindcss": "^3.4.17"
   },
